--- a/Web/Web/Views/Admin/Index.cshtml
+++ b/Web/Web/Views/Admin/Index.cshtml
@@ -64,6 +64,13 @@
     </a>
 </div>
 
+<div class="mt-3">
+    <a asp-controller="Auth" asp-action="UserList" class="btn btn-primary">
+        Manage Users
+    </a>
+</div>
+
+
 @if (HttpContextAccessor.HttpContext?.Session.GetString("loggedUserId") == "1")
 {
     <h4 class="mt-5">Manage Users</h4>
